--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
   <base href="/">
   <title>LigaBank</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type='text/css' href="./css/styles.min.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="./bundle.js"></script>
+  <script src="./js/bundle.js"></script>
 </body>
 </html>
