--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <base href="/">
   <title>LigaBank</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type='text/css' href="./css/normalize.css">
   <link rel="stylesheet" type='text/css' href="./css/styles.min.css">
 </head>
 <body>
