--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type='text/css' href="./css/normalize.css">
   <link rel="stylesheet" type='text/css' href="./css/styles.min.css">
 </head>
-<body>
+<body className="page-body">
   <div id="root"></div>
   <script src="./js/bundle.js"></script>
 </body>
